調整顯示樣式

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <h1>Best Online Casino Games</h1>
         <p>Dorem ipsum dolor sitamet, consectetur adipiscing elit, sed do eiusm tempor incididunt ulabore et dolore
           magna aliqua.</p>
-        <div class="slider-btns">
+        <div class="d-flex flex-column flex-lg-row align-items-center">
           <a href="assets/res/Gstar28.mobileconfig" role="button" class="btn btn-outline-secondary me-lg-3 mb-4 mb-lg-0" download>
             <i class="fab fa-apple"></i>
             IOS Download
