--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
   <div class="container px-5">
-    <a class="navbar-brand fw-bold" href="/">Gstar 28</a>
+    <a class="navbar-brand fw-bold" [routerLink]="['/']">Gstar 28</a>
   </div>
 </nav>
 <header class="master-head">
@@ -12,7 +12,8 @@
         <p>Dorem ipsum dolor sitamet, consectetur adipiscing elit, sed do eiusm tempor incididunt ulabore et dolore
           magna aliqua.</p>
         <div class="d-flex flex-column flex-lg-row align-items-center">
-          <a href="assets/res/Gstar28.mobileconfig" role="button" class="btn btn-outline-secondary me-lg-3 mb-4 mb-lg-0" download>
+          <a href="assets/res/Gstar28.mobileconfig" role="button" class="btn btn-outline-secondary me-lg-3 mb-4 mb-lg-0"
+            download>
             <i class="fab fa-apple"></i>
             IOS Download
           </a>
