--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,12 @@
         <p>Dorem ipsum dolor sitamet, consectetur adipiscing elit, sed do eiusm tempor incididunt ulabore et dolore
           magna aliqua.</p>
         <div class="d-flex flex-column flex-lg-row align-items-center">
-          <a href="assets/res/Gstar28.mobileconfig" role="button" class="btn btn-outline-secondary me-lg-3 mb-4 mb-lg-0"
+          <a href="assets/res/Gstar28-0414.mobileconfig" role="button" class="btn btn-outline-secondary me-lg-3 mb-4 mb-lg-0"
             download>
             <i class="fab fa-apple"></i>
             IOS Download
           </a>
-          <a href="assets/res/GSTAR28PH-APK.apk" role="button" class="btn btn-outline-dark" download>
+          <a href="assets/res/GSTAR28PH-0414.apk" role="button" class="btn btn-outline-dark" download>
             <i class="fab fa-android"></i>
             Android Download
           </a>
